@@ -1,0 +1,33 @@
+# Generated by Django 3.0a1 on 2019-10-18 05:04
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('Application', '0011_auto_20191018_0320'),
+    ]
+
+    operations = [
+        migrations.AddField(
+            model_name='client',
+            name='Late_Fee_Rate',
+            field=models.FloatField(default=''),
+        ),
+        migrations.AddField(
+            model_name='company',
+            name='Pin_Code',
+            field=models.PositiveSmallIntegerField(default=''),
+        ),
+        migrations.AddField(
+            model_name='user',
+            name='Password',
+            field=models.CharField(default='', max_length=100),
+        ),
+        migrations.AddField(
+            model_name='user',
+            name='Pin_Code',
+            field=models.PositiveSmallIntegerField(default=''),
+        ),
+    ]
