@@ -1,0 +1,18 @@
+# Generated by Django 3.0a1 on 2019-10-18 05:21
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('Application', '0017_auto_20191018_1051'),
+    ]
+
+    operations = [
+        migrations.AlterField(
+            model_name='client',
+            name='Late_Fee_Rate',
+            field=models.FloatField(),
+        ),
+    ]
