@@ -1,0 +1,17 @@
+# Generated by Django 3.0a1 on 2019-10-18 05:24
+
+from django.db import migrations
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('Application', '0018_auto_20191018_1051'),
+    ]
+
+    operations = [
+        migrations.RemoveField(
+            model_name='client',
+            name='Late_Fee_Rate',
+        ),
+    ]
