@@ -1,0 +1,18 @@
+# Generated by Django 3.0a1 on 2019-10-18 05:26
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('Application', '0019_remove_client_late_fee_rate'),
+    ]
+
+    operations = [
+        migrations.AddField(
+            model_name='client',
+            name='Late_Fee_Rate',
+            field=models.FloatField(default=0),
+        ),
+    ]
