@@ -3,6 +3,9 @@
 import os
 import sys
 
+#from dotenv import load_dotenv
+#load_dotenv()
+
 
 def main():
     os.environ.setdefault('DJANGO_SETTINGS_MODULE', 'database.settings')
